Fix #949 - Truncate email address to prevent overlap (#955)
* Fix #949 - Truncate email address to prevent overlap

* Fix #949 - Center dashboard stats vertically, remove whitespace, add slight padding

* Add whitespace and Protocol token

--- a/static/scss/partials/dashboard.scss
+++ b/static/scss/partials/dashboard.scss
@@ -5,6 +5,10 @@
 
 .mpp-dashbaord-header-name {
     font-weight: 700;
+    width: 100%;
+    word-wrap: break-word;
+    padding-right: $spacing-sm;
+
     span {
         font-weight: 400;
         display: block;
@@ -138,7 +142,7 @@
 @media screen and (min-width: 768px) {
     .mpp-dashbaord-header-container {
         display: flex;
-        align-items: flex-end;
+        align-items: center;
         justify-content: space-between;
     }    
     .mpp-dashbaord-header-title {
